# valve_gc

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
csgo_gc/: CMakeLists.txt  appid.cpp  config.cpp  config.h  game_profile.cpp  game_profile.h  gc_active.h  gc_client.cpp  gc_client.h  gc_message.h  gc_server.cpp  gc_shared.h  inventory.cpp  inventory.h  item_schema.cpp  item_schema.h  networking_active.h  platform.h  platform_unix.cpp  platform_windows.cpp  steam_hook.cpp
docs/: README.md  tf2_live_hook.md
examples/: config.txt  tf2_config.txt  tf2_items_game.txt  tf2_unusual_inventory.txt
launcher/: CMakeLists.txt  launcher_unix.cpp  launcher_win.cpp
protobufs/: gcsdk_gcmessages.pb.cc  gcsdk_gcmessages.pb.h  gcsdk_gcmessages.proto
tf2_gc/: CMakeLists.txt  inventory.cpp  inventory.h  item_schema.cpp  item_schema.h  keyvalue.cpp  keyvalue.h  main.cpp
tf2_gc_hook/: CMakeLists.txt  gc_client_tf2.cpp  gc_client_tf2.h  gc_const_tf2.h  gc_server_tf2.h  networking_client_tf2.h  networking_server_tf2.h
